# nano-vllm-cpp

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  bench.cpp  example.cpp  serve_docs.sh
bench/: bench_e2e.cpp  bench_e2e.py  bench_kernels.cpp  bench_runtime_layers.cpp  run_qwen3_once.cpp
docs/: block_manager.html  config_params.html  flash_attention.html  inference_dataflow.html  interview_star.html  interview_star.md  loader.html  operator_refactoring.html  operators.html  optimization_evidence.html  qwen3_model.html  scheduler.html  tensor.html
include/core/: config.h  sampling_params.h
include/engine/: block_manager.h  llm_engine.h  model_runner.h  scheduler.h  sequence.h
include/kernels/: activation.h  attention.h  bias_add.h  device_helpers.cuh  embedding.h  flash_attn.h  gather.h  kernel_types.h  kvcache.h  rms_norm.h  rotary.h  sampling.h  split_qkv.h
include/layers/: activation.h  attention.h  embed_head.h  kernel_ops.h  layernorm.h  linear.h  rotary_embedding.h  sampler.h
include/models/: transformer.h
include/utils/: context.h  cublas_wrapper.h  cuda_allocator.h  cuda_common.h  loader.h  tensor.h  tensor_parallel.h  tokenizer.h
question/: block_manager_interview.html  config_interview.html  scheduler_interview.html  sequence_interview.html
scripts/: rewrite_history.sh
src/core/: config.cpp
src/engine/: block_manager.cpp  llm_engine.cpp  model_runner.cpp  scheduler.cpp  sequence.cpp
src/kernels/: activation.cu  attention.cu  bias_add.cu  embedding.cu  flash_attn.cpp  gather.cu  kernel_types.cu  kvcache.cu  rms_norm.cu  rotary.cu  sampling.cu  split_qkv.cu
src/layers/: activation.cpp  attention.cpp  embed_head.cpp  kernel_ops.cu  layernorm.cpp  linear.cpp  rotary_embedding.cpp  sampler.cpp
src/models/: transformer.cpp
src/utils/: context.cpp  cublas_wrapper.cpp  cuda_allocator.cpp  cuda_common.cpp  loader.cpp  tensor.cpp  tensor_parallel.cpp  tokenizer.cpp
tests/: test_block_manager.cpp  test_config.cpp  test_layers.cpp  test_llm_engine.cpp  test_loader.cpp  test_model_runner.cpp  test_models.cpp  test_scheduler.cpp  test_sequence.cpp  test_tensor.cpp
